# comfyui-corridorkey

./: .gitignore  CLAUDE.md  README.md  install.py  pyproject.toml  requirements.txt
nodes/: __init__.py  keyer.py  loader.py  utils.py
utils/: device.py  inference.py
workflows/: corridorkey_basic.json
