[project]
name = "comfyui-corridorkey"
version = "0.1.0"
description = "ComfyUI nodes for CorridorKey neural green screen keying"
license = { text = "CC BY-NC-SA 4.0" }
requires-python = ">=3.10"
dependencies = [
    "torch",
    "timm",
    "opencv-python",
    "numpy",
    "scipy",
]

[project.urls]
Repository = "https://github.com/cnoellert/comfyui-corridorkey"

[tool.comfy]
PublisherId = "cnoellert"
DisplayName = "ComfyUI CorridorKey"
Icon = ""
